sistemato metodi consecutive e inRow