@@ -60,7 +60,6 @@ public class LivingRoom{
     public LivingRoom(int numOfPLayers) {
 
         //preparo due vettori da cui prendere le tipologie carte da aggiungere al bag
-        List<BoardCard> bag = new ArrayList<BoardCard>();
         colorType[] colors = {colorType.PURPLE, colorType.BLUE, colorType.LIGHT_BLUE, colorType.YELLOW, colorType.WHITE, colorType.GREEN};
         ornamentType[] ornaments = {ornamentType.A, ornamentType.B, ornamentType.C};
 
@@ -161,11 +160,11 @@ public class LivingRoom{
     }
 
 
-    public BoardCard[][] updateBoard(ArrayList<Pair<Integer ,Integer>> selected ) throws UnselectableCardException {
+    public BoardCard[][] updateBoard(ArrayList<Pair<Integer,Integer>> selected ) throws UnselectableCardException {
         for (Pair<Integer, Integer> coordinates : selected) {
             int i = coordinates.getFirst();
             int j = coordinates.getSecond();
-            if (!(isPresent(i, j) && freeCorner(i, j))) {
+            if (!(isPresent(i, j) && freeCorner(i, j) && consecutive(selected))) {
                 throw new UnselectableCardException();
             }
         }
@@ -249,32 +248,39 @@ public class LivingRoom{
         return ((i+j) % DIM - 1 == 0 && (i == 0 || i == DIM - 1));
     }
 
-    private boolean inRow(Pair<Integer,Integer> coordA, Pair<Integer,Integer> coordB){
-        int xA = coordA.getFirst();
-        int yA = coordA.getSecond();
-        int xB = coordB.getFirst();
-        int yB = coordB.getSecond();
-
-        if(xA == xB && (yA == yB+1 || yB == yA+1)){
-            return true;
+    private boolean consecutive(ArrayList<Pair<Integer, Integer>> cards) {
+        int size = cards.size();
+        if (size == 1) return true;
+        else if (size == 2) {
+            int xA = cards.get(0).getFirst();
+            int yA = cards.get(0).getSecond();
+            int xB = cards.get(1).getSecond();
+            int xC = cards.get(1).getSecond();
+            return inRow(cards.get(0), cards.get(1));
         }
-        else return yA == yB && (xA == xB + 1 || xB == xA + 1);
-
-    }
-    private boolean inRow(Pair<Integer,Integer> coordA, Pair<Integer,Integer> coordB, Pair<Integer,Integer> coordC){
-        int xA = coordA.getFirst();
-        int yA = coordA.getSecond();
-        int xB = coordB.getFirst();
-        int yB = coordB.getSecond();
-        int xC = coordC.getFirst();
-        int yC = coordC.getSecond();
-        if(!((xA==xB && xB==xC) || (yA == yB && yB == yC)))
-            return false;
         else {
-            return inRow(coordA,coordB) && inRow(coordB,coordC);
+            int fixedX = cards.get(0).getFirst();
+            int fixedY = cards.get(0).getFirst();
+            if (!((cards.get(1).getFirst() == fixedX && cards.get(2).getFirst() == fixedX)) || (cards.get(1).getSecond() == fixedY && cards.get(2).getSecond() == fixedY))
+                return false;
+            else {
+                boolean passed = (inRow(cards.get(0), cards.get(1)) && inRow(cards.get(1), cards.get(2))) ||
+                        (inRow(cards.get(0), cards.get(2)) && inRow(cards.get(1), cards.get(2))) ||
+                        (inRow(cards.get(0), cards.get(2)) && inRow(cards.get(1), cards.get(2)));
+                return passed;
+            }
         }
+    }
+        private boolean inRow(Pair<Integer,Integer> coordA, Pair<Integer,Integer> coordB){
+            int xA = coordA.getFirst();
+            int yA = coordA.getSecond();
+            int xB = coordB.getFirst();
+            int yB = coordB.getSecond();
 
-
+            if(xA == xB && (yA == yB+1 || yB == yA+1)){
+                return true;
+            }
+            else return yA == yB && (xA == xB + 1 || xB == xA + 1);
 
     }
 
